--- a/houseing_audit_backend/package.json
+++ b/houseing_audit_backend/package.json
@@ -1,28 +1,23 @@
 {
   "name": "houseing_audit_backend",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "cd houseing_audit_backend\r npm init -y\r # download the required stuff\r npm install express mongoose cors",
+  "description": "",
   "dependencies": {
-    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-<<<<<<< HEAD
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.16.0",
-    "mongoose": "^8.15.0",
-=======
-    "mongoose": "^8.15.0",
+    "mongoose": "^8.15.1",
     "sharp": "^0.34.2",
->>>>>>> fff4aa7be2ac11b7a0f94a8198f83af9b67044ab
     "tesseract.js": "^6.0.1"
   }
 }
