--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.1",
     "tailwind-merge": "^3.3.0",
     "tw-animate-css": "^1.3.0",
     "web-vitals": "^2.1.4"
