--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "express": "^5.1.0",
+    "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.511.0",
     "mongodb": "^6.16.0",
